--- a/resume.cls
+++ b/resume.cls
@@ -93,7 +93,7 @@
 % Defines the rSection environment for the large sections within the CV
 \newenvironment{rSection}[1]{ % 1 input argument - section name
   \sectionskip
-  {{\bf #1}} % Section title
+  {{\large\bf #1}} % Section title
   \sectionlineskip
   \noindent\rule{10cm}{.8pt}
   \begin{list}{}{ % List for each individual item in the section
