--- a/sections/experience/zillow.tex
+++ b/sections/experience/zillow.tex
@@ -2,10 +2,12 @@
 \textbf{Senior Software Engineer} \hfill July 2023 - Present\\
 Zillow Group, Inc. \hfill \textit{Seattle, WA}
 
-Leading the transformation of Zillow’s MLS data and product DevOps team into a self-service compute platform for >200 engineers. Our team of three owns and manages the cloud infrastructure, networking, observability, CICD, tooling, and automation that empowers our product teams with seamless operations.
+Designed and leading the transition of Zillow’s Industry Software DevOps teams into a self-service compute platform for >200 engineers. Responsible for operational duties, infrastructure and tooling architecture, maintainer on platform tooling and services. [AWS, EKS K8s, Terraform, Golang and Python, Gitlab CI.]
 \begin{itemize}
-    \item Developed the 1 year roadmap to align with company and org leadership needs while also addressing tech debt priorities. Defined the on-call, tenant support, and engagement policies; created a design process (lightweight RFC), rewrote and improved internal onboarding documentation.
-    \item Created tooling to deploy services that reduced bad kubernetes deployments due to configuration errors by 20\%, which also gives post-apply feedback for tenants to easily debug without intervention.
+    \item Leading a team of nine engineers to transform the culture and processes of a traditional centralized DevOps team to a platform engineering support model; delivering self-service tooling and compute via an incremental approach to minimize risks and maximize impact.
+    \item Founder and maintainer of the team's bazel monorepo, migrating all code and services to a single repository to simplify the build process, increase code reuse, reduce abandoned code, and keep dependencies up to date uniformly.
+    \item Develops the yearly roadmap to align with business priorities while also triaging tech debt.  
+    \item Drove adoption of platform tooling across 19 teams and hundreds of services to standardize deployments. Tooling improved deployment feedback and ergonomics which improved developer velocity while also adding observability and reporting from
     \item Rewrote EKS cluster definitions and cluster bootstrap process, added functionality to allow for ephemeral compute and easier A/B testing with our kubernetes stack and faster iteration on platform changes, disaster recovery and kubernetes version upgrades.
 \end{itemize}
 \end{mdframed}
