--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,7 +1,6 @@
 \begin{rSection}{Skills}
     \begin{tabular}{ @{} >{\bfseries}l @{\hspace{1ex}} l }
-    Languages: & Go, Python, Scala, Typescript \vspace{0.1em}\\
-    Relevant Technologies: & Airflow, Docker, K8s, Azure/GCP/AWS,\\& 
-    Bazel, Terraform \vspace{0.1em}\\
+    Languages: & Golang, Python, Scala, Terraform/HCL, Typescript \vspace{0.1em}\\
+    Technologies: & K8s, AWS/Azure/GCP, GitOps, Bazel, Airflow/Temporal \vspace{0.1em}\\
     \end{tabular}
 \end{rSection}
